# RCJ_Soccer_Open_2024

./: .gitignore  README  README.md
cad/: README
jetson/catkin_ws/src/robocup2024/: CMakeLists.txt  package.xml
jetson/catkin_ws/src/robocup2024/include/: angle.h  blob_detection.h  chassis.h  gstreamer.h  pid.h  preprocessing.h  rpi-bitmask.h
jetson/catkin_ws/src/robocup2024/launch/: camera.launch  robot.launch
jetson/catkin_ws/src/robocup2024/lib/: angle.cpp  blob_detection.cpp  chassis.cpp  gstreamer.cpp  pid.cpp  preprocessing.cpp  rpi-bitmask.cpp
jetson/catkin_ws/src/robocup2024/src/: create_video_from_frames.py  frontcamera.cpp  omnicamera.cpp  rpi-serial.py  strategy.cpp
rpi_pico/: .gitignore  CMakeLists.txt  LICENCE  i2c_scanner.c  main.cpp
rpi_pico/lib/hardware/: Adafruit_BNO055.cpp  Adafruit_BNO055.h  USB_Serial.cpp  USB_Serial.h  compass_classes.cpp  compass_classes.h  motor.cpp  motor.h
rpi_pico/lib/software/: bitmask.cpp  bitmask.h  hex.cpp  hex.h  pid.cpp  pid.h
rpi_pico/pico-lib/: gpio.h  i2c.h  serial.h  time.h  usb.h
rpi_pico/pico-lib/definitions/: gpio.cpp  i2c.cpp  serial.cpp  time.cpp
